@@ -4,7 +4,7 @@ INCLUDES = ${GTK_CFLAGS} -DSESSION
 
 bin_PROGRAMS = rglclock
 
-rglclock_SOURCES = main.cc glclock.cc module.cc simple.c gdkgl.c
+rglclock_SOURCES = main.cc glclock.cc about.cc module.cc simple.c gdkgl.c
 rglclock_LDADD = ${GL_LIBS} ${GTK_LIBS}
 
 noinst_HEADERS = glclock.h module.h simple.h gdkgl.h
