@@ -1,5 +1,10 @@
 1999-01-25  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>
 
+	* glclock.cc (describe): Add a call to show_about.
+
+	* Makefile.am (rglclock_SOURCES): Add about.cc.
+	* about.cc: New file.
+
 	* simple.c (simple_draw_clock): Modify parameters.
 	(simple_draw_clock): Use the model local viewer by default.
 
